kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rusttmp-service
  namespace: rusttmp
  labels:
    app: rusttmp
spec:
  selector:
    app: rusttmp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8084
      targetPort: 8084
      name: dbg
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: grpc
