kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rusttmp-ingress
  namespace: rusttmp
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  tls:
    - hosts:
        - r.yuff.tw1.su
        - dbg-r.yuff.tw1.su
      secretName: rusttmp-tls
  rules:
    - host: r.yuff.tw1.su
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rusttmp-service
                port:
                  number: 8080
    - host: dbg-r.yuff.tw1.su
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rusttmp-service
                port:
                  number: 8084
